Added date to tag

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,10 @@ jobs:
       packages: write
 
     steps:
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -30,10 +34,18 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
+      # This step will resolve username capitalization
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: darkroom-${{ steps.date.outputs.date }}
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
           context: .
           file: darkroom.Dockerfile
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:darkroom
+          tags: ${{ steps.meta.outputs.tags }}
