Added a dev env for Python + Nextflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     strategy:
         matrix:
-          environment: [darkroom, rstudio]
+          environment: [darkroom, rstudio, nfpy]
     runs-on: ubuntu-latest
     permissions:
       contents: read
